@@ -198,9 +198,8 @@ class TestGlmBinomial(CheckModelResults):
         from results.results_glm import Star98
         data = load()
         data.exog = add_constant(data.exog)
-        trials = data.endog[:,:2].sum(axis=1)
         self.res1 = GLM(data.endog, data.exog, \
-        family=sm.families.Binomial()).fit(data_weights = trials)
+        family=sm.families.Binomial()).fit()
         #NOTE: if you want to replicate with RModel
         #res2 = RModel(data.endog[:,0]/trials, data.exog, r.glm,
         #        family=r.binomial, weights=trials)
